<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Search</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="action_settings">Settings</string>
    <string name="origin">Origin City</string>
    <string name="origin_date">Origin Date</string>
    <string name="origin_distance">Distance From Origin</string>
    <string name="destination">Destination City</string>
    <string name="destinatin_date">Destination Date</string>
    <string name="destination_distance">Distance From Destination</string>
</resources>
